--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 html, body {
-  margin: 10;
+  text-align: center;
+  margin: 10px;
   padding: 0;
   background-color: black;
 }
@@ -7,4 +8,27 @@ canvas {
   max-width: 500;
   margin: auto;
   display: block;
+}
+.leftDiv {
+  width: 50%;
+  float: left;
+}
+.rightDiv {
+  width: 50%;
+  float: right;
+}
+.slider {
+  appearance: none;
+  background: #656565;
+  border-radius: 1cm;
+  width: 200px;
+  outline: black;
+}
+.slider::-webkit-slider-thumb {
+  appearance: none;
+  width: 12px;
+  height: 12px;
+  background: #323232;
+  border-radius: 1cm;
+  cursor: pointer;
 }
